# python-training-advanced

./: example_protocol.py  pyproject.toml
cli/: example_argparse.py  example_typer.py  task_typer.py  task_typer_solved.py
concurrency_and_parallelism/: example_executor.py  example_future.py  example_pools.py
concurrency_and_parallelism/tasks/: task_1.py  task_2.py  task_2_verification.py
context_managers/: .gitignore  example_custom_implementation_of_contextlib_contextmanager.py  examples.py
context_managers/solutions/: task_1.py  task_2.py
context_managers/tasks/: task_1.py  task_2.py
decorators/: examples.py  typing_examples.py
decorators/solutions/: task_1.py  task_2.py  task_3.py  task_4.py
decorators/tasks/: task_1.py  task_2.py  task_3.py  task_4.py
design_patterns/: example_name_mangling.py  example_readonly.py
design_patterns/solutions/: task_1.py
dunder_methods/: example_builtin_functions.py  example_lifecycle.py  example_protocols.py  examples_overloading_operators.py
generators/: example_generators.py
importing/: example_paths.py
metaclasses/: activity_diagram.puml  examples.py  interpretation_example.py
mocks_and_patches/: examples_mocks.py  examples_patches.py  tasks.md  test_task_1.py  test_task_2.py  test_task_3.py  test_task_4.py
profiling/: example_collections.py  example_snippet.py  slow_code.py  tasks_and_instructions.md
testing/: auth.py  auth_solved.py  test_auth.py  test_auth_solved.py  test_crashcourse_example.py
type_hints/: examples.py  task.py  task_solved.py
uv/: examples.md  tasks.md
(+11 files in other folders)
