[project]
name = "python-advanced"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "lagom>=2.7.7",
    "marimo>=0.18.0",
    "prometheus-client>=0.23.1",
    "pydantic>=2.12.4",
    "snowflake-connector-python>=4.1.0",
    "sqlalchemy>=2.0.44",
    "tenacity>=9.1.2",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "import-linter>=2.7",
    "mypy>=1.18.2",
    "pyinstrument>=5.1.1",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.6",
    "snakeviz>=2.2.2",
]
